CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(p_linked_list)

SET(CMAKE_COLOR_MAKEFILE OFF)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}
                    ${gtest_SOURCE_DIR}/include
                    ${PROJECT_SOURCE_DIR}/src)

SET(p_linked_list_VERSION_MAJOR 0)
SET(p_linked_list_VERSION_MINOR 0)
SET(p_linked_list_VERSION_PATCH 0)
SET(p_linked_list_VERSION_STRING ${p_linked_list_VERSION_MAJOR}.${p_linked_list_VERSION_MINOR}.${p_linked_list_VERSION_PATCH})

IF(UNIX)
        SET(CMAKE_CXX_FLAGS "-Wall -W -Werror")
        SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -DDEBUG")
        SET(CMAKE_CXX_FLAGS_RELEASE"${CMAKE_CXX_FLAGS} -DNDEBUG -O2")
        SET(CMAKE_C_FLAGS "-Wall -W -Werror -std=c99")
        SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS} -DDEBUG")
        SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -DNDEBUG -O2")
ENDIF()

ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(gtest-1.7.0)
ADD_SUBDIRECTORY(tests)
